Implemented details screen, handle recyclerview onClickItem, passing data using navArgs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ImageSearchApp</string>
     <string name="btn_retry">Retry</string>
     <string name="menu_search">Search</string>
+    <string name="display_username">Photo by %s</string>
+    <string name="display_description">Description : %s</string>
 </resources>
